--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -43,7 +43,7 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64
-          tags: ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64" 
+          tags: ${{steps.meta.outputs.version}}-amd64" 
           cache-from: type=gha
           cache-to: type=gha,mode=max
         env:
@@ -55,9 +55,9 @@ jobs:
         name: Build and push arm64
         id: buildarm64
         run: |
-          echo "docker buildx build . --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64 --push"
-          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64" --push
-#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
+          echo "docker buildx build . --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 --push"
+          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
+#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
         env: 
           DOCKER_CONTENT_TRUST: 0
  #       env: 
@@ -84,9 +84,9 @@ jobs:
         name: create manifest and push it
         run: |
           echo "version is ${{ steps.meta.outputs.version }}"
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest annotate ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64 ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest annotate ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64
           docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
-#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64 ${{env.REGISTRY_IMAGE}}:${{github.sha}}-arm64
+#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
 #          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
           # buildx builds a manifest list, add our amd68 manifest to it
   sign: 
