--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -1,18 +1,22 @@
-name: multibuild
+name: ci
+
 on:
-    push:
-        tags:
-        - '[0-9]+.[0-9]+.[0-9]+'
+  push:
+    branches:
+      - "main"
 
 env:
-    REGISTRY: docker.io
-    REGISTRY_IMAGE: jpsevigny/jptest
+  REGISTRY_IMAGE: jpsevigny/jptest
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64
     steps:
       -
         name: Checkout
@@ -36,65 +40,43 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push amd64
-        id: buildamd64
+        name: Build and push by digest
+        id: build
         uses: docker/build-push-action@v4
         with:
           context: .
-          push: true
-          platforms: linux/amd64
-          tags: "${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64" 
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-        env:
-          DOCKER_CONTENT_TRUST: 0
-#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64
-#        env: 
-#          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
-      - 
-        name: Build and push arm64
-        id: buildarm64
+          platforms: ${{ matrix.platform }}
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+      -
+        name: Export digest
         run: |
-          echo "docker buildx build . --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 --push"
-          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
-#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
-        env: 
-          DOCKER_CONTENT_TRUST: 0
- #       env: 
- #         BUILDX_NO_DEFAULT_ATTESTATIONS: 1
-
-  create_manifest:
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+      -
+        name: Upload digest
+        uses: actions/upload-artifact@v3
+        with:
+          name: digests
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+  
+  merge:
     runs-on: ubuntu-latest
     needs:
       - build
     steps:
       -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
+        name: Download digests
+        uses: actions/download-artifact@v3
         with:
-          images: ${{ env.REGISTRY_IMAGE }}
+          name: digests
+          path: /tmp/digests
       -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: create manifest and push it
-        run: |
-          echo "version is ${{ steps.meta.outputs.version }}"
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest annotate ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64
-          docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
-#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
-#          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
-          # buildx builds a manifest list, add our amd68 manifest to it
-  sign: 
-    runs-on: ubuntu-latest
-    needs: 
-      - create_manifest
-    # if: ${{ always() && contains(needs.*.result, 'failure') }}
-    steps:
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       -
         name: Docker meta
         id: meta
@@ -107,35 +89,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: pull image 
-        run: |
-          echo "docker pull ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}"
-          docker pull ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-        env: 
-          DOCKER_CONTENT_TRUST: 0
       -
-        name: setup trust signature
-        run: | 
-          mkdir -p ~/.docker/trust/private
-          echo "${DOCKER_PRIVATE_KEY}" > ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
-          chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
-          docker trust key load ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key --name "${DOCKER_PRIVATE_KEY_ID}"
-        env:
-          DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
-          DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
-          DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-      - 
-        name: sign manifests and push to registry
+        name: Create manifest list and push
+        working-directory: /tmp/digests
         run: |
-          docker trust sign ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-          docker manifest push --purge ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-        env:
-          DOCKER_CONTENT_TRUST: 1
-          DOCKER_PRIVATE_KEY_ID: "${{ secrets.DOCKER_PRIVATE_KEY_ID }}"
-          DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
-          DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
-      - 
-        name: Verify signatures
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+      -
+        name: Inspect image
         run: |
-          docker trust inspect --pretty ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
