--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -44,6 +44,21 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: "${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64" 
+          provenance: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+        env:
+          DOCKER_CONTENT_TRUST: 0
+      -
+        name: Build and push arm64
+        id: buildarm64
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          platforms: linux/arm64
+          tags: "${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" 
+          provenance: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
         env:
@@ -51,17 +66,17 @@ jobs:
 #          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64
 #        env: 
 #          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
-      - 
-        name: Build and push arm64
-        id: buildarm64
-        run: |
-          echo "docker buildx build . --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 --push"
-          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
+#      - 
+#        name: Build and push arm64
+#        id: buildarm64
+#        run: |
+#          echo "docker buildx build . --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 --push"
+#          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
 #          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
-        env: 
-          DOCKER_CONTENT_TRUST: 0
- #       env: 
- #         BUILDX_NO_DEFAULT_ATTESTATIONS: 1
+#        env: 
+#          DOCKER_CONTENT_TRUST: 0
+#       env: 
+#         BUILDX_NO_DEFAULT_ATTESTATIONS: 1
 
   create_manifest:
     runs-on: ubuntu-latest
