--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -49,62 +49,48 @@ jobs:
           cache-to: type=gha,mode=max
         env:
           DOCKER_CONTENT_TRUST: 1
-      -
+      - 
         name: Build and push arm64
         id: buildarm64
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          platforms: linux/arm64
-          tags: "${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" 
-          provenance: false
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-        env:
-          DOCKER_CONTENT_TRUST: 1
         run: |
-            docker buildx version
-            docker --version
-#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{github.sha}}-amd64
-#        env: 
-#          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
-#      - 
-#        name: Build and push arm64
-#        id: buildarm64
-#        run: |
-#          echo "docker buildx build . --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 --push"
-#          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
-#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
-#        env: 
-#          DOCKER_CONTENT_TRUST: 0
-#       env: 
-#         BUILDX_NO_DEFAULT_ATTESTATIONS: 1
+          docker buildx version
+          docker --version
+          echo "docker buildx build . --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 --push"
+          docker buildx build . --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest rm ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
+        env: 
+          DOCKER_CONTENT_TRUST: 1
+          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
 
-#  create_manifest:
-#    runs-on: ubuntu-latest
-#    needs:
-#      - build
-#    steps:
-#      -
-#        name: Docker meta
-#        id: meta
-#        uses: docker/metadata-action@v4
-#        with:
-#          images: ${{ env.REGISTRY_IMAGE }}
-#      -
-#        name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#      - 
-#        name: create manifest and push it
-#        run: |
-#          echo "version is ${{ steps.meta.outputs.version }}"
-#          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
-#          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
-#          # buildx builds a manifest list, add our amd68 manifest to it
+  create_manifest:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: create manifest and push it
+        run: |
+          docker buildx imagetools inspect --raw ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 
+          docker buildx imagetools inspect --raw ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 
+          echo "version is ${{ steps.meta.outputs.version }}" 
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
+          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+          # buildx builds a manifest list, add our amd68 manifest to it
+        env: 
+          DOCKER_CONTENT_TRUST: 1
+          BUILDX_NO_DEFAULT_ATTESTATIONS: 1
 #  sign: 
 #    runs-on: ubuntu-latest
 #    needs: 
