--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -83,6 +83,9 @@ jobs:
           # docker buildx imagetools inspect --raw ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 
           echo "version is ${{ steps.meta.outputs.version }}" 
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
+          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+          docker pull ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+          docker trust sign ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
           docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
         env: 
           DOCKER_CONTENT_TRUST: 0
