--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -113,3 +113,11 @@ jobs:
         name: Verify signatures
         run: |
           docker trust inspect --pretty ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+
+      -
+        name: check that secure download works
+        run: |
+          docker pull ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} 
+          docker run -it ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}  --version
+        env:
+          DOCKER_CONTENT_TRUST: 1
