--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -38,10 +38,7 @@ jobs:
         id: produce_output
         run: |
           message="versions=[\"latest\", \"1.1\", \"1.2\"]"
-          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          echo "versions=<<$EOF" >> "$GITHUB_OUTPUT"
-          echo "$message" >> "$GITHUB_OUTPUT"
-          echo "$EOF" >> "$GITHUB_OUTPUT"         
+          echo "version=$message" >> "$GITHUB_OUTPUT"
 
   test_output:
     runs-on: ubuntu-latest
