--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -87,19 +87,9 @@ jobs:
           echo "we have $TAGS_JSON" 
           #echo "versions=[\"latest\", \"1.1\", \"1.2\"]" >> $GITHUB_OUTPUT
 
-  test_output:
-    runs-on: ubuntu-latest
-    needs:
-      - get_versions
-    steps:
-      - 
-        name: something
-        run: |
-          echo "hello ${{ needs.get_versions.outputs.versions }}"
-
   create_manifest:
     runs-on: ubuntu-latest
-    needs: [test_output, get_versions]
+    needs: get_versions
     strategy:
         matrix:
             version: ${{ fromJSON(needs.get_versions.outputs.versions) }}
